[package]
name = "scoped_map"
version = "0.1.0"
authors = ["Mark Barbone <mark.l.barbone@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.4.4"
either = "1.6"
typed-arena = {git = "https://github.com/mb64/rust-typed-arena.git"}

[dev-dependencies]
rand = {version = "0.7", features = ["small_rng"]}
