[package]
name = "scoped_map"
version = "0.1.0"
authors = ["Mark Barbone <mark.l.barbone@gmail.com>"]
edition = "2018"

[dependencies]
ahash = "0.4.4"
typed-arena = {git = "https://github.com/mb64/rust-typed-arena.git"}

[dev-dependencies]
rand = { version = "0.7", features = ["small_rng"] }
criterion = "0.3"
criterion-macro = "0.3"
im-rc = "15.0"
zipf = "6.1"

[features]
benching = []
