[package]
name = "scoped_map"
version = "0.2.0"
authors = ["Mark Barbone <mark.l.barbone@gmail.com>"]
edition = "2018"

[dependencies]
ahash = "0.4.4"
typed-arena = {git = "https://github.com/mb64/rust-typed-arena.git"}

[dev-dependencies]
rand = { version = "0.7", features = ["small_rng"] }
criterion = "0.3"
criterion-macro = "0.3"
hayami = "0.3"
im = "15.0"
im-rc = "15.0"
indexmap = "1.6"
zipf = "6.1"

[features]
benching = []

[[bench]]
name = "lookup_insert"
path = "benches/lookup_insert.rs"
harness = false
